# windows-chewing-tsf

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CandidateWindow.cpp  CandidateWindow.h  Cargo.toml  ComPtr.h  DisplayAttributeInfo.cpp  DisplayAttributeInfoEnum.h  DisplayAttributeProvider.cpp  ImeModule.cpp  ImeModule.h  ImeWindow.h  LangBarButton.cpp  LangBarButton.h  README.md  TextService.cpp  TextService.h  appveyor.yml  cliff.toml  version.rc
.cargo/: config.toml
.github/: FUNDING.yml
ChewingIME/: CMakeLists.txt  ChewingIME.cpp  ChewingIME.def  ChewingIME.h  ChewingIME.rc  imm.h
ChewingPreferences/: AboutDialog.h  CMakeLists.txt  ChewingPreferences.cpp  ChewingPreferences.exe.manifest  ChewingPreferences.rc  Dialog.cpp  Dialog.h  KeyboardPropertyPage.cpp  KeyboardPropertyPage.h  PropertyDialog.cpp  SymbolsPropertyPage.cpp  SymbolsPropertyPage.h  TypingPropertyPage.cpp  TypingPropertyPage.h  UiPropertyPage.h  resource.h
ChewingTextService/: CClassFactory.cpp  CMakeLists.txt  ChewingConfig.cpp  ChewingConfig.h  ChewingIME.cpp  ChewingIME.def  ChewingImeModule.cpp  ChewingImeModule.h  ChewingTextService.cpp  ChewingTextService.def  ChewingTextService.h  ChewingTextService.rc  DllEntry.cpp  resource.h
chewing-cleanup/: Cargo.toml
chewing-cleanup/src/: main.rs
chewing-editor/: package-lock.json  package.json
chewing_tip/: CClassFactory.cpp  CClassFactory.h  CMakeLists.txt  Cargo.toml  ChewingConfig.cpp  ChewingConfig.h  ChewingTextService.cpp  ChewingTextService.def  ChewingTextService.h  ChewingTextService.rc  DllEntry.cpp  EditSession.cpp  EditSession.h  TextService.cpp  TextService.h  Utils.cpp  Utils.h  build.rs  resource.h
chewing_tip/idl/: libime2.idl
chewing_tip/rc/: ChewingTextService.rc  resource.h
chewing_tip/src/: com.rs  display_attribute.rs  gfx.rs  lang_bar.rs  lib.rs  logging.rs  window.rs
chewing_tip/src/ts/: chewing.rs  config.rs  display_attribute.rs  edit_session.rs  key_event.rs  lang_bar.rs  menu.rs  mod.rs  resources.rs  theme.rs
chewing_tip/src/ts/ui_elements/: candidate_list.rs  message_box.rs  mod.rs  notification.rs
chewing_tip/src/window/: candidate_window.rs  message_window.rs  mod.rs
chewingwrapper/: CMakeLists.txt
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
config/: Cargo.toml
config/src/: config.rs  lib.rs
crates/chewing_tip_core/: Cargo.toml
crates/chewing_tip_core/src/: config.rs  ipc.rs  lib.rs  result.rs  sandbox.rs  shell.rs
crates/chewing_tip_core/src/ipc/: client.rs  messages.rs  named_pipe.rs  values.rs  varlink.rs
crates/chewing_tip_host/: Cargo.toml  build.rs
crates/chewing_tip_host/rc/: chewing_tip_host.manifest  debug.manifest  release.manifest
crates/chewing_tip_host/src/: ipc.rs  main.rs  text_service.rs  ui.rs  update.rs
crates/chewing_tip_host/src/text_service/: chewing.rs  keybind.rs  keyevent.rs
crates/chewing_tip_host/src/ui/: event_loop.rs  gfx.rs  message_box.rs  window.rs
crates/chewing_tip_host/src/ui_elements/: candidate_list.rs  notification.rs
crates/chewing_tip_host/src/update/: config.rs  releases.rs  version.rs
crates/tsfreg/: Cargo.toml
crates/tsfreg/src/: main.rs
editor/: Cargo.toml  build.rs  editor.rc  index.html  package-lock.json  package.json
editor/src/: About.tsx  App.tsx  DictionaryDetail.tsx  DictionaryEditor.tsx  DictionaryExplorer.tsx  PhraseEditor.tsx  editor.rs  keymap.ts  main.rs  main.tsx  version.tsx
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: editor.rs  explore.rs  file.rs  lib.rs  main.rs
editor/ui/: about-window.slint  bopomofo-keyboard.slint  editor-window.slint  index.slint  version.slint
installer/: README.txt  gpl-notice.rtf  installer.nsi  lgpl-2.1.rtf  version.json  version.wxi  windows-chewing-tsf-debug.bat  (+3 more)
libIME/: CMakeLists.txt  CandidateWindow.cpp  CandidateWindow.h  Cargo.toml  ComPtr.h  DisplayAttributeInfo.h  DisplayAttributeInfoEnum.cpp  DisplayAttributeInfoEnum.h  DisplayAttributeProvider.cpp  DisplayAttributeProvider.h  DrawUtils.cpp  DrawUtils.h  ImeEngine.cpp  ImeEngine.h  ImeModule.cpp  ImeModule.h  ImeWindow.cpp  ImeWindow.h  ImmSupport.cpp  ImmSupport.h  KeyEvent.cpp  KeyEvent.h  LangBarButton.cpp  LangBarButton.h  MessageWindow.cpp  MessageWindow.h  NinePatch.cpp  NinePatch.h  TextService.cpp  TextService.h
libIME/idl/: libime2.idl
libIME/imm32/: CompStr.cpp  CompStr.h  ImcLock.cpp  ImcLock.h  ImmSupport.cpp  ImmSupport.h
libIME/src/: display_attribute.rs  gfx.rs  lib.rs
libIME/src/window/: candidate_window.rs  message_window.rs  mod.rs
preferences/: Cargo.toml  build.rs  index.html  package-lock.json  package.json  preferences.rc
preferences/src/: About.tsx  App.tsx  about.rs  config.rs  config.tsx  editor.rs  fonts.rs  main.rs  main.tsx  theme.tsx  version.tsx
preferences/src-tauri/: Cargo.toml  tauri.conf.json
preferences/src-tauri/capabilities/: default.json
preferences/src-tauri/src/: config.rs  fonts.rs  lib.rs  main.rs
preferences/ui/: about-box.slint  about-window.slint  app-window.slint  bopomofo-keyboard.slint  config-window.slint  editor-window.slint  globals.slint  index.slint  version.slint
tip/: Cargo.toml  build.rs
tip/rc/: ChewingTextService.rc  resource.h  version.rc
tip/src/: com.rs  config.rs  gfx.rs  imm32.rs  keybind.rs  lib.rs  logging.rs  msctf.rs  quirk.rs  w32.rs
tip/src/text_service/: chewing.rs  display_attribute.rs  edit_session.rs  key_event.rs  lang_bar.rs  menu.rs  mod.rs  resources.rs  theme.rs
tip/src/text_service/ui_elements/: candidate_list.rs  message_box.rs  mod.rs  notification.rs
tip/src/ts/: chewing.rs  display_attribute.rs  edit_session.rs  key_event.rs  lang_bar.rs  menu.rs  mod.rs  resources.rs
tip/src/ts/ui_elements/: candidate_list.rs
tip/src/ui/: gfx.rs  mod.rs  window.rs
tip/src/w32/: imm32.rs  msctf.rs
tsfreg/: Cargo.toml
tsfreg/src/: main.rs
update/: Cargo.toml
update/docs/: DESIGN.md  im.chewing.windows_chewing_tsf.releases.xml
update/src/: config.rs  main.rs  releases.rs  version.rs
(+39 files in other folders)
