[workspace]
members = ["tip", "update", "xtask"]
exclude = ["editor", "preferences"]
resolver = "3"

[workspace.dependencies]
chewing = { git = "https://github.com/chewing/libchewing" }
chewing_capi = { git = "https://github.com/chewing/libchewing" }

[profile.release]
lto = "thin"
panic = "abort"
debug = true
