[package]
name = "chewing-cleanup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
windows-registry = "0.5.3"
xshell = "0.2.7"

[dependencies.windows]
version = "0.61.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading"
]
