[package]
name = "chewing_tip"
version = "24.10.1"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
chewing_capi = { version = "0.9.1", features = ["sqlite"] }
log = "0.4.22"
nine_patch_drawable = "0.1.0"
win_dbg_logger = "0.1.0"
windows-core = "0.60.0"
windows-numerics = "0.1.1"
windows = { version = "0.60.0", features = [
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
getrandom = "0.3.1"

[build-dependencies]
anyhow = "1.0.95"
cc = "1.2.5"
embed-resource = "3.0.1"
