[package]
name = "chewing_tip"
license = "GPL-3.0-or-later"
version = "25.8.1"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
chewing = { version = "0.10.0", features = ["sqlite"] }
chewing_capi = { version = "0.10.0", features = ["sqlite"] }
log = "0.4.22"
win_dbg_logger = "0.1.0"
windows-core = "0.61.0"
windows-numerics = "0.2.0"
windows-registry = "0.5.1"
windows = { version = "0.61.0", features = [
    "Foundation_Numerics",
    "Foundation",
    "System",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
getrandom = "0.3.1"
zhconv = { version = "0.3.3", default-features = false, features = ["opencc"] }

[build-dependencies]
anyhow = "1.0.95"
cc = "1.2.5"
embed-resource = "3.0.1"
