[package]
name = "chewing_tip_config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
windows-registry = "0.5.3"

[dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Graphics_Direct2D_Common",
  "Win32_Security_Authorization",
  "Win32_System_Registry",
]
