[package]
name = "chewing-editor"
license = "GPL-3.0-or-later"
version = "25.8.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chewing = "0.10.0"
log = "0.4.27"
win_dbg_logger  = "0.1.0"
winit = "0.30.11"

[dependencies.slint]
version = "1.8.0"
default-features = false
features = [
    "compat-1-2",
    "std",
    "log",
    "backend-winit",
    "renderer-femtovg",
    "unstable-winit-030",
]

[build-dependencies]
embed-resource = "3.0.1"
slint-build = "1.8.0"
