[package]
name = "chewing-preferences"
license = "GPL-3.0-or-later"
version = "25.4.0"
edition = "2024"

[[bin]]
name = "ChewingPreferences"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chewing = { version = "0.9.1", features = ["sqlite"] }
slint = "1.8.0"
windows-registry = "0.5.1"
windows = { version = "0.61.0", features = [
    "Win32_Security",
    "Win32_System_Registry",
] }

[build-dependencies]
embed-resource = "3.0.1"
slint-build = "1.8.0"
