[package]
name = "chewing-preferences"
license = "GPL-3.0-or-later"
version = "25.4.0"
edition = "2024"

[[bin]]
name = "ChewingPreferences"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chewing = "0.9.1"
windows-registry = "0.5.1"
windows = { version = "0.61.0", features = [
    "Win32_Graphics_Gdi"
] }

[dependencies.slint]
version = "1.8.0"
default-features = false
features = [
    "compat-1-2",
    "std",
    "log",
    "backend-winit",
    "renderer-femtovg",
]

[build-dependencies]
embed-resource = "3.0.1"
slint-build = "1.8.0"
