[package]
name = "chewing-preferences"
license = "GPL-3.0-or-later"
version = "25.8.1"
edition = "2024"

[[bin]]
name = "ChewingPreferences"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chewing = "0.10.0"
chewing_tip_config = { path = "../config" }
log = "0.4.27"
windows = { version = "0.61.0", features = [
    "Win32_Graphics_Gdi",
] }
win_dbg_logger = "0.1.0"
winit = "0.30.11"
sysinfo = "0.36.1"

[dependencies.slint]
version = "1.8.0"
features = [
    "unstable-winit-030",
]

[build-dependencies]
embed-resource = "3.0.1"
slint-build = "1.8.0"
