[package]
name = "chewing_tip"
license = "GPL-3.0-or-later"
version = "26.1.2"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
chewing = { workspace = true }
log = { version = "0.4.0", features = ["kv"] }
logforth = { version = "0.29.1", features = ["bridge-log"] }
windows-core = "0.62.2"
windows-numerics = "0.3.1"
windows-registry = "0.6.1"
windows = { version = "0.62.2", features = [
    "Foundation_Numerics",
    "Foundation",
    "System",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
getrandom = "0.3.1"
zhconv = { version = "0.3.3", default-features = false, features = ["opencc"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
nightly = []

[build-dependencies]
anyhow = "1.0.95"
cc = "1.2.5"
embed-resource = "3.0.1"
