[package]
name = "chewing_tip"
version = "26.4.1"
edition = "2024"
license = "GPL-3.0-or-later"

build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
chewing = { workspace = true }
chewing_tip_core = { path = "../crates/chewing_tip_core" }
exn = "0.3.0"
getrandom = ">= 0.3.0, < 0.5.0"
interprocess = { workspace = true }
log = { version = "0.4.0", features = ["kv"] }
logforth = { version = "0.29.1", features = ["bridge-log"] }
minisign-verify = "0.2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
windows = { version = "0.62.2", features = [
  "Foundation",
  "System",
  "Win32_Globalization",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_System_Variant",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-numerics = "0.3.1"
windows-registry = "0.6.1"
zhconv = { version = "0.4.1", default-features = false, features = ["opencc"] }

[build-dependencies]
anyhow = "1.0.95"
cc = "1.2.5"
embed-resource = "3.0.1"

[features]
nightly = []
