[package]
name = "tsfreg"
license = "GPL-3.0-or-later"
version = "25.4.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.0", features = [
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-link = "0.1.1"
windows-registry = "0.5.1"

[features]
nightly = []
