[package]
name = "chewing-update-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
roxmltree = "0.20.0"
ureq = { version = "3.1.0", features = ["platform-verifier"] }
win_dbg_logger = "0.1.0"
windows-registry = "0.5.3"
windows = { version = "0.61.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
