[package]
name = "chewing_tip_core"
version.workspace = true
edition = "2024"

[dependencies]
exn.workspace = true
fnv = "1.0.7"
interprocess.workspace = true
log.workspace = true
minisign-verify = "0.2.5"
serde.workspace = true
serde_json.workspace = true
widestring = "1.2.1"
windows = { version = "0.62.2", features = [
  "Foundation",
  "System",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Pipes",
  "Win32_System_Threading"
] }
