[package]
name = "tsfreg"
version.workspace = true
edition = "2024"

[dependencies]
chewing_tip_core = { path = "../chewing_tip_core" }
serde_json.workspace = true
windows = { version = "0.62.2", features = [
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices"
] }
windows-registry = { version = "0.6.1", optional = true }

[features]
nightly = ["dep:windows-registry"]
