[package]
name = "chewing-editor"
license = "GPL-3.0-or-later"
version = "26.1.3"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chewing_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chewing = "0.11.0"
chewing_tip = { path = "../../tip" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tempfile = "3.23.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
